source/css/main.css
/* ... */
#home-card #card-div .avatar:hover img {
    transform: rotate(360deg);
}
#home-card #card-div .description {
    margin: 20px auto;
    width: 85%;
}
#home-card #card-div .friend-links .friend-link {
    margin-bottom: 5px;
}
#home-card #card-div .friend-links a {
    border-radius: 5px;
    color: #5c6b72;
    display: block;
    padding: 8px 0;
}
#home-card #card-div .icon-links .icon-link {
    margin: 5px;
}
#home-card #card-div .icon-links a {
    border-radius: 5px;
    color: #5c6b72;
    font-size: 18px;
    padding: 5px;
}
#home-card #card-div .icon-links a:hover,
#home-card #card-div .friend-links a:hover,
#home-posts .page-current .page-num:hover {
    background: #66afef;
    color: #fff;
}
#home-card #card-div .icon-links,
#home-card #card-div .friend-links {
    border-top: #cdcdcd solid 1px;
    margin: 10px auto;
    padding-top: 10px;
    width: 85%;
}
#home-card #card-div .name {
    font-size: 16px;
    font-weight: bold;
    margin: 20px auto;
}
#home-head {
    display: flex;
    height: 100vh;
    width: 100vw;
}
#home-head #home-background {
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 100vh;
    left: 0;
    position: absolute;
    top: 0;
    width: 100vw;
    z-index: -1;
}
#home-head #home-info .info {
    align-items: center;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    text-align: center;
}
#home-head #home-info .loop:nth-child(1) {
    animation: loop1 10s linear infinite;
    background: #fff;
    border-radius: 38% 62% 63% 37%/41% 44% 56% 59%;
    opacity: 0.3;
    transform: rotate(30deg);
}
#home-head #home-info .loop:nth-child(2) {
    animation: loop2 15s linear infinite;
    background: #fff;
    border-radius: 38% 62% 63% 37%/41% 44% 56% 59%;
    opacity: 0.45;
    transform: rotate(60deg);
}
#home-head #home-info .loop:nth-child(3) {
    animation: loop3 10s linear infinite;
    background: #fff;
    border-radius: 38% 62% 63% 37%/41% 44% 56% 59%;
    opacity: 0.3;
    transform: rotate(90deg);
}
#home-head #home-info .loop:nth-child(4) {
    animation: loop4 15s linear infinite;
    background: #fff;
    border-radius: 38% 62% 63% 37%/41% 44% 56% 59%;
    opacity: 0.45;
    transform: rotate(120deg);
}
#home-head #home-info,
#home-posts {
    margin: auto;
}
#home-posts .page-current {
    align-items: center;
    display: flex;
    font-weight: bold;
    justify-content: center;
    margin-top: 50px;
    text-align: center;
    width: 100%;
}
#home-posts .page-current .current {
    border-radius: 5px;
    color: #da0a51;
    display: inline-block;
    height: 35px;
    line-height: 35px;
    margin: 0 7px;
    padding: 5px;
    width: 35px;
}
#home-posts .page-current .page-num,
#home-posts .page-current .page-omit {
    border-radius: 5px;
    display: inline-block;
    height: 35px;
    line-height: 35px;
    margin: 0 7px;
    padding: 5px;
    width: 35px;
}
#home-posts .page-current a {
    color: #999;
}
#home-posts .post {
    background: #fff;
    border-radius: 20px;
    box-shadow: 0 0 20px #d9d9d980;
    transition: box-shadow 0.25s, transform 0.25s;
}
#home-posts .post .category-and-date {
    color: #5c6b72;
    margin-top: 15px;
    text-align: center;
    width: 100%;
}
#home-posts .post .category-and-date .category {
    display: inline-block;
    margin-right: 25px;
}
#home-posts .post .category-and-date .category a,
#archives a,
#archives .tag-icon,
#archives .item-time,
#archives .categories-tags span a:hover .icon,
.article .info a {
    color: #5c6b72;
}
#home-posts .post .category-and-date .date,
#archives .tags,
#menu #desktop-menu a span {
    display: inline-block;
}
#home-posts .post .category-and-date .special {
    display: inline-block;
    margin-left: 25px;
}
#home-posts .post .go-post {
    background: linear-gradient(120deg, #9abbf7 0%, #ffbbf4 100%);
    border: 0;
    border-radius: 20px 0;
    bottom: -5px;
    box-shadow: 2px 2px 10px 0 #ffbbf47a;
    color: #fff;
    font-size: 14px;
    font-weight: bold;
    padding: 10px 24px;
    position: absolute;
    right: -5px;
    transition: box-shadow 0.25s ease-out, right 0.25s ease-out;
}
#home-posts .post .go-post:hover {
    box-shadow: -2px -2px 10px 0 #9abbf77a;
    right: -7px;
}
#home-posts .post .post-tags .tag {
    display: inline-block;
    font-weight: bold;
    margin-right: 10px;
}
#home-posts .post .post-tags a {
    font-size: 14px;
}
#home-posts .post .post-tags,
#archives .info,
.article .info {
    line-height: 1.7;
}
#home-posts .post-title {
    color: #66afef;
    text-align: center;
}
#home-posts .post:hover {
    box-shadow: 0 0 5px #d9d9d9;
    transform: translate(-5px, -5px);
}
#home-posts-wrap {
    background: transparent;
    border-radius: 10px;
    display: flex;
    margin: auto;
    padding: 20px;
}
#home-posts-wrap,
#archives,
.article,
#footer #footer-wrap {
    box-sizing: border-box;
}
#loading {
    align-items: center;
    background: #fff;
    display: flex;
    flex-direction: column;
    height: 100vh;
    justify-content: center;
    left: 0;
    position: fixed;
    top: 0;
    width: 100vw;
    word-break: keep-all;
    z-index: 2147483647;
}
#loading h2,
#loading p,
#loading img {
    margin: 10px;
}
#loading img {
    border-radius: 0;
    height: 50px;
}
#loading-circle {
    align-items: center;
    border: 10px solid #a3ddfb;
    border-radius: 50%;
    display: flex;
    flex-direction: column;
    height: 50vmin;
    justify-content: center;
    padding: 50px;
    text-align: center;
    width: 50vmin;
}
#main {
    margin-right: calc(100% - 100vw);
}
#menu {
    background: #92cafa;
    box-shadow: 0 -1px 10px 0 #9e9e9e4d;
    font-weight: bold;
    line-height: 50px;
    position: fixed;
    top: 0;
    transition: background 0.25s ease-out, top 0.25s ease-out;
    width: 100vw;
    z-index: 1004;
}
#menu #desktop-menu {
    height: 50px;
}
/* ... */

